json methods, minor cleanup

--- a/B_Intermediate_1/03. Importing Modules.ipynb
+++ b/B_Intermediate_1/03. Importing Modules.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# 3.1 Python's Import System\n",
     "\n",
-    "Python has an import module that allows you to access code that is external, relative to your script. There are various ways of importing but the most common way is via the __`import`__ statement. Python's import system can get deep and it's more than what we need but [the documentation](https://docs.python.org/3.5/reference/import.html) is a good source if you want to learn more.\n",
+    "Python has an import module that allows you to access code that is external, relative to your script. There are various ways of importing but the most common way is via the __`import`__ statement. Python's import system can get deep and it's more than what we need but [the documentation](https://docs.python.org/dev/reference/import.html) is a good source if you want to learn more.\n",
     "\n",
     "Now is a good time to make a distinction between packages and modules. To quote the documentation and reference:\n",
     "\n",
@@ -28,7 +28,7 @@
     "\n",
     "### [os.path](https://docs.python.org/3.5/library/os.path.html#module-os.path)\n",
     "\n",
-    "You'll be using [`os.path`](https://docs.python.org/3.5/library/os.path.html#module-os.path) a lot when referring to your files since hardcoded paths will prevent your code from being portable."
+    "You'll be using [`os.path`](https://docs.python.org/dev/library/os.path.html#module-os.path) a lot when referring to your files since hardcoded paths will prevent your code from being portable."
    ]
   },
   {
@@ -137,7 +137,7 @@
    "source": [
     "`import` works with built-in and pip installed packages, modules as well as variables, functions and classes.\n",
     "\n",
-    "### [os.environ](https://docs.python.org/3.5/library/os.html#os.environ)\n",
+    "### [os.environ](https://docs.python.org/dev/library/os.html#os.environ)\n",
     "\n",
     "There may be times when you want to set or retrieve environment variables for use in your application. These may be values you don't want to hardcode in your script for security or other purposes. `os.environ` lets us work with environment variables."
    ]
@@ -198,7 +198,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "`os.environ` returns a [mapping type](https://docs.python.org/3.5/glossary.html#term-mapping) object that works similar to a dictionary. Let's see if manipulating it like a dictionary works."
+    "`os.environ` returns a [mapping type](https://docs.python.org/dev/glossary.html#term-mapping) object that works similar to a dictionary. Let's see if manipulating it like a dictionary works."
    ]
   },
   {
@@ -229,7 +229,7 @@
    "source": [
     "## 3.1.2 Local Packages\n",
     "\n",
-    "Import also works with local packages but there's one requirement - the [**`__init__.py`**](https://docs.python.org/3.5/tutorial/modules.html#packages) file.\n",
+    "Import also works with local packages but there's one requirement - the [**`__init__.py`**](https://docs.python.org/dev/tutorial/modules.html#packages) file.\n",
     "\n",
     "> The `__init__.py` files are required to make Python treat the directories as containing packages; this is done to prevent directories with a common name, such as string, from unintentionally hiding valid modules that occur later on the module search path. In the simplest case, `__init__.py` can just be an empty file, but it can also execute initialization code for the package or...\n",
     "\n",
@@ -355,17 +355,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 3.1.5 [`import *` and `__all__`](https://docs.python.org/3.5/tutorial/modules.html#importing-from-a-package)\n",
+    "## 3.1.5 [`import *` and `__all__`](https://docs.python.org/dev/tutorial/modules.html#importing-from-a-package)\n",
     "\n",
     "Using `from package/module_name import *` imports all submodules or objects from the package into the current namespace. This is __not recommended__ since we usually don't know what's in there and it can make debugging difficult.\n",
     "\n",
-    "In your modules, you can define `__all__` (as a name, not as a string) to control what can be imported from it when using `import *`. Packages can have this in its `__init__.py` file to serve as an index of modules. As a result, using `import *` only imports the names explicitly listed in `__all__`. However, `__all__` only affects `import *` and does not affect packages imported explicitly by their names."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "In your modules, you can define `__all__` (as a name, not as a string) to control what can be imported from it when using `import *`. Packages can have this in its `__init__.py` file to serve as an index of modules. As a result, using `import *` only imports the names explicitly listed in `__all__`. However, `__all__` only affects `import *` and does not affect packages imported explicitly by their names.\n",
+    "\n",
     "# 3.2 Common Modules\n",
     "\n",
     "Let's try more Python modules to give you a better idea about what you can do. We'll look at random and datetime. Then we'll look at modules related to the web, json and requests, with the latter being a 3rd party module used for http requests.\n",
@@ -409,7 +404,7 @@
    "source": [
     "## 3.2.2 `random`\n",
     "\n",
-    "##### [random.randrange()](https://docs.python.org/3.5/library/random.html#random.randrange)\n",
+    "##### [random.randrange()](https://docs.python.org/dev/library/random.html#random.randrange)\n",
     "\n",
     "> This returns a randomly selected element from range. It doesn’t actually build a range object."
    ]
@@ -437,9 +432,9 @@
    "source": [
     "Have you noticed how the output changed after running the code several times? But remember that it will only show numbers from 0 to 9. 10 is not included.\n",
     "\n",
-    "##### [random.choice()](https://docs.python.org/3.5/library/random.html#random.choice)\n",
+    "##### [random.choice()](https://docs.python.org/dev/library/random.html#random.choice)\n",
     "\n",
-    "> Return a random element from the non-empty sequence such as list and tuple. If sequence is empty, it raises [`IndexError`](https://docs.python.org/3.5/library/exceptions.html#IndexError)."
+    "> Return a random element from the non-empty sequence such as list and tuple. If sequence is empty, it raises [`IndexError`](https://docs.python.org/dev/library/exceptions.html#IndexError)."
    ]
   },
   {
@@ -454,11 +449,6 @@
     "\n",
     "random.choice([1,2,3,4,5])"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -504,9 +494,9 @@
    "source": [
     "## 3.2.3 `json`\n",
     "\n",
-    "[json.dumps](https://docs.python.org/3.5/library/json.html#json.dumps)\n",
+    "[json.dumps](https://docs.python.org/dev/library/json.html#json.dumps)\n",
     "\n",
-    "[json.loads](https://docs.python.org/3.5/library/json.html#json.dumps)"
+    "> Serialize obj to a JSON formatted str."
    ]
   },
   {
@@ -553,6 +543,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "[json.loads](https://docs.python.org/dev/library/json.html#json.loads)\n",
+    "\n",
+    "> Deserialize a str instance containing a JSON document to a Python object."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -570,7 +569,9 @@
    "source": [
     "## 3.2.4 [`requests`](http://docs.python-requests.org/en/latest/user/quickstart/)\n",
     "\n",
-    "requests.get"
+    "requests.get()\n",
+    "\n",
+    "> Sends a GET request."
    ]
   },
   {
