--- a/A_Beginner_1/02. Introspection.ipynb
+++ b/A_Beginner_1/02. Introspection.ipynb
@@ -18,7 +18,7 @@
     "\n",
     "On the image above, you can see that I'm using Python version 3.5.1.\n",
     "\n",
-    "## 2.2 [help()](https://docs.python.org/3/library/functions.html#help)\n",
+    "## 2.2 [help()](https://docs.python.org/dev/library/functions.html#help)\n",
     "\n",
     "### Starting the help Utility\n",
     "\n",
@@ -77,7 +77,7 @@
    "source": [
     "If you want to know more about __`help()`__, just click [here](http://www.ibm.com/developerworks/library/l-pyint/index.html).\n",
     "\n",
-    "## 2.3 [dir()](https://docs.python.org/3/library/functions.html#dir)\n",
+    "## 2.3 [dir()](https://docs.python.org/dev/library/functions.html#dir)\n",
     "\n",
     "Python provides a way to examine the contents of modules (and other objects) using the built-in __`dir()`__ function.\n",
     " \n",
