--- a/A_Beginner_1/03. Coding Style.ipynb
+++ b/A_Beginner_1/03. Coding Style.ipynb
@@ -115,7 +115,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For other rules, please click [here](https://docs.python.org/3/reference/lexical_analysis.html)\n",
+    "For other rules, please click [here](https://docs.python.org/3.5/reference/lexical_analysis.html)\n",
     "\n",
     "## 3.2 Indentation\n",
     "\n",
