--- a/A_Beginner_1/04. Operators and Delimiters.ipynb
+++ b/A_Beginner_1/04. Operators and Delimiters.ipynb
@@ -1111,8 +1111,7 @@
     "- __Identity Operators:__ These are the '__`is`__' and '__`is not`__' operators in Python. They are used to check if two values (_or variables_) are located on the same part of the memory. Two variables that are equal does not imply that they are identical.\n",
     "\n",
     "\n",
-    "- __Comparision Operators:__ These are used to compare values. It either returns '__`True`__' or '__`False`__' according to the condition.\n",
-    "\n"
+    "- __Comparision Operators:__ These are used to compare values. It either returns '__`True`__' or '__`False`__' according to the condition.\n"
    ]
   }
  ],
