--- a/A_Beginner_2/3.3 Data Types - Strings.ipynb
+++ b/A_Beginner_2/3.3 Data Types - Strings.ipynb
@@ -128,7 +128,23 @@
     "\n",
     "These are the escape sequences Python supports:\n",
     "\n",
-    "![Beginner_2](./images/img_escape_characters.png)\n",
+    "| ESCAPE       | WHAT IT DOES                                              |\n",
+    "|--------------|-----------------------------------------------------------|\n",
+    "| `\\\\`         | Backslash(\\)                                              |\n",
+    "| `\\'`         | Single-quote(')                                           |\n",
+    "| `\\\"`         | Double-quote(\")                                           |\n",
+    "| `\\a`         | ASCII bell (BELL)                                         |\n",
+    "| `\\b`         | ASCII backspace (BS)                                      |\n",
+    "| `\\f`         | ASCII formfeed (FF)                                       |\n",
+    "| `\\n`         | ASCII linefeed (LF)                                       |\n",
+    "| `\\N{name}`   | Character named in Unicode database (Unicode only)        |\n",
+    "| `\\r`         | Carriage Return (CR)                                      |\n",
+    "| `\\t`         | Horizontal Tab (TAB)                                      |\n",
+    "| `\\uxxxx`     | Character with 16-bit hex value `xxxx` (Unicode only)     |\n",
+    "| `\\Uxxxxxxxx` | Character with 32-bit hex value `xxxxxxxx` (Unicode only) |\n",
+    "| `\\v`         | ASCII vertical tab (VT)                                   |\n",
+    "| `\\ooo`       | Character with octal value `ooo`                          |\n",
+    "| `\\xhh`       | Character with hex value hh                               |\n",
     "\n",
     "Here are some examples. Run the code to see the result:"
    ]
