Changed User to models

--- a/C_Advanced_1/2.2 Peewee.ipynb
+++ b/C_Advanced_1/2.2 Peewee.ipynb
@@ -91,7 +91,7 @@
     "    User,\n",
     "]\n",
     "db.connect()\n",
-    "db.create_tables([User])\n",
+    "db.create_tables([models])\n",
     "db.commit()\n",
     "db.close()"
    ]
