--- a/D_Web_Development_1/04. Debugging and Logging Modules.ipynb
+++ b/D_Web_Development_1/04. Debugging and Logging Modules.ipynb
@@ -45,7 +45,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![Pdb](Images/pdb.png)\n",
+    "![Pdb](images/pdb.png)\n",
     "\n",
     "Try the following keywords in pdb:\n",
     "\n",
@@ -112,7 +112,7 @@
    "source": [
     "Another way of outputting messages is by using the generic `logger.log()` method. It accepts a log level parameter before the message.\n",
     "\n",
-    "![Log levels](Images/log-levels.png)"
+    "![Log levels](images/log-levels.png)"
    ]
   },
   {
