Updated beginner 1 notebooks

--- a/A_Beginner_1/02. Introspection.ipynb
+++ b/A_Beginner_1/02. Introspection.ipynb
@@ -15,15 +15,6 @@
     "Just go to the terminal and type __`python`__ and you will see the Python promt (__`>>>`__) and the Python version that you are currently using:\n",
     "\n",
     "![Beginner_1](./images/img_python_prompt.png)\n",
-<<<<<<< HEAD
-    "On the image above, you can see that I'm using Python version 3.5.1.\n",
-    "\n",
-    "## 2.2 [help()](https://docs.python.org/3/library/functions.html#help)\n",
-    "\n",
-    "### Starting the help Utility\n",
-    "\n",
-    "Let's start by asking for help. You may type __`help()`__ without specifying an argument, the interactive help system starts on the interpreter console."
-=======
     "\n",
     "On the image above, you can see that I'm using Python version 3.5.1.\n",
     "\n",
@@ -36,7 +27,6 @@
     "For example:\n",
     "\n",
     "![Beginner_1](./images/img_help.png)"
->>>>>>> origin/beginner1
    ]
   },
   {
@@ -54,12 +44,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-<<<<<<< HEAD
-    "For example:\n",
-    "![Beginner_1](./images/img_help.png)\n",
-    "\n",
-=======
->>>>>>> origin/beginner1
     "### Asking Python for help Keywords:\n",
     "\n",
     "help> keywords\n",
@@ -70,9 +54,7 @@
     "\n",
     "As you can see, Python's online help utility displays information on a variety of topics, or for a particular object. The help utility is quite useful, and does make use of Python's introspection capabilities.\n",
     "\n",
-    "If we want to quit, just type __`'quit'`__, and we will be returned to the Python prompt.\n",
-    "\n",
-    "`help()` can also accept parameters. It can be any object (everything in Python is an object!), and it gives helpful information specific to that object."
+    "Now, let's run __`'quit'`__ to be returned to the Python prompt."
    ]
   },
   {
@@ -80,6 +62,24 @@
    "execution_count": null,
    "metadata": {
     "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "quit"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`help()` can also accept parameters. It can be any object (everything in Python is an object!), and it gives helpful information specific to that object."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -93,11 +93,7 @@
    "source": [
     "If you want to know more about __`help()`__, just click [here](http://www.ibm.com/developerworks/library/l-pyint/index.html).\n",
     "\n",
-<<<<<<< HEAD
-    "## 2.3 [dir()](https://docs.python.org/3/library/functions.html#dir)\n",
-=======
     "## 2.3 [dir()](https://docs.python.org/3.5/library/functions.html#dir)\n",
->>>>>>> origin/beginner1
     "\n",
     "Python provides a way to examine the contents of modules (and other objects) using the built-in __`dir()`__ function.\n",
     " \n",
@@ -120,13 +116,9 @@
   },
   {
    "cell_type": "markdown",
-<<<<<<< HEAD
-   "metadata": {},
-=======
    "metadata": {
     "collapsed": true
    },
->>>>>>> origin/beginner1
    "source": [
     "If you want to know more about __`dir()`__, click [here](http://www.ibm.com/developerworks/library/l-pyint/index.html)\n",
     "\n",
