--- a/A_Beginner_1/03. Coding Style.ipynb
+++ b/A_Beginner_1/03. Coding Style.ipynb
@@ -12,6 +12,9 @@
     "\n",
     "I'll be showing some examples, but don't worry about the code just yet. I just want you to know the use of whitespaces. We'll tackle more about the codes you'll see below a little later.\n",
     "\n",
+    "__Note:__ \n",
+    "You might experience some errors if you run the codes below. Those codes are just for illustration purposes, so errors are normal at this point. Please stay calm. :)\n",
+    "\n",
     "##### Avoid whitespaces in the following situations:\n",
     "\n",
     "- Immediately inside the parentheses, brackets, or braces"
@@ -21,7 +24,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -115,11 +118,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-<<<<<<< HEAD
-    "For other rules, please click [here](https://docs.python.org/3/reference/lexical_analysis.html)\n",
-=======
     "For other rules, please click [here](https://docs.python.org/3.5/reference/lexical_analysis.html)\n",
->>>>>>> origin/beginner1
     "\n",
     "## 3.2 Indentation\n",
     "\n",
@@ -148,11 +147,7 @@
    "source": [
     "__Note:__\n",
     "\n",
-<<<<<<< HEAD
     "For indentation, 4 spaces instead of tabs.\n",
-=======
-    "Use 4 spaces per indentation level.\n",
->>>>>>> origin/beginner1
     "\n",
     "So what would happen if the indentation is incorrect?\n",
     "Run the code below to find out!"
@@ -209,11 +204,7 @@
     "\n",
     "### 3.3.1 Single-line comments\n",
     "\n",
-<<<<<<< HEAD
     "Single-line comments begin with the hash character (__`#`__) and are terminated by\n",
-=======
-    "Single-line comments begin with the hash character (<b> ```#```</b> ) and are terminated by\n",
->>>>>>> origin/beginner1
     "the end of line. Python is ignoring all text that comes after the # to the end of the line, \n",
     "they are not part of the command.  For example:"
    ]
@@ -315,11 +306,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-<<<<<<< HEAD
     "Statements contained within the `[ ]`, `{ }`, or `( )` do not need to use the line continuation character.\n",
-=======
-    "Statements contained within the ```[ ]```, ```{ }```, or ```( )``` do not need to use the line continuation character.\n",
->>>>>>> origin/beginner1
     "\n",
     "For example:"
    ]
