--- a/C_Advanced_1/2.2 Peewee.ipynb
+++ b/C_Advanced_1/2.2 Peewee.ipynb
@@ -51,7 +51,7 @@
    "source": [
     "import peewee\n",
     "\n",
-    "db = peewee.SqliteDatabase('peewee.db')  # This ideally belongs in a settings.py file\n",
+    "db = peewee.SqliteDatabase(':memory:')  # This ideally belongs in a settings.py file\n",
     "\n",
     "\n",
     "class BaseModel(peewee.Model):\n",
@@ -87,11 +87,12 @@
    },
    "outputs": [],
    "source": [
+    "db = peewee.SqliteDatabase(':memory:') \n",
     "models = [\n",
     "    User,\n",
     "]\n",
     "db.connect()\n",
-    "db.create_tables([models])\n",
+    "db.create_tables(models)\n",
     "db.commit()\n",
     "db.close()"
    ]
@@ -200,7 +201,7 @@
    },
    "outputs": [],
    "source": [
-    "db = peewee.SqliteDatabase('peewee.db')\n",
+    "db = peewee.SqliteDatabase(':memory:')\n",
     "\n",
     "with db.atomic() as txn:\n",
     "    User.create(name='Charlie')  # This is the outer-most level, so this block corresponds to a transaction.\n",
@@ -286,7 +287,7 @@
    },
    "outputs": [],
    "source": [
-    "db = peewee.SqliteDatabase('peewee.db', autocommit=False)\n",
+    "db = peewee.SqliteDatabase(':memory:', autocommit=False)\n",
     "\n",
     "db.begin()\n",
     "User.create(name='Somebody')\n",
@@ -381,7 +382,7 @@
     "# In your settings file\n",
     "import peewee\n",
     "\n",
-    "db = peewee.SqliteDatabase('peewee.db')  # This ideally belongs in a settings.py file\n",
+    "db = peewee.SqliteDatabase(':memory:')  # This ideally belongs in a settings.py file\n",
     "\n",
     "\n",
     "# In your models file\n",
