--- a/A_Beginner_1/03. Coding Style.ipynb
+++ b/A_Beginner_1/03. Coding Style.ipynb
@@ -284,7 +284,7 @@
    "source": [
     "## 3.5 Multi-line Statements\n",
     "\n",
-    "Statements in Python typically end with a new line. Python does, however, allow the use of the line continuation character (\\) to denote that the line should continue. \n",
+    "Statements in Python typically end with a new line. Python does, however, allow the use of the line continuation character (\\\\) to denote that the line should continue. \n",
     "\n",
     "For example:"
    ]
