--- a/D_Web_Development_2/04. Views and URLs.ipynb
+++ b/D_Web_Development_2/04. Views and URLs.ipynb
@@ -513,6 +513,18 @@
     "\n",
     "As you may have noticed, the year and month arguments were passed as strings, not `int`. All arguments are captured from the URL are strings."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "kwargs = {year:'2005', month:'03'}\n",
+    "views.month_archive(request, **kwargs)"
+   ]
   }
  ],
  "metadata": {
