--- a/D_Web_Development_2/05. Templates and Forms.ipynb
+++ b/D_Web_Development_2/05. Templates and Forms.ipynb
@@ -422,7 +422,7 @@
    },
    "outputs": [],
    "source": [
-    "    profile = get_object_or_404(Profile, pk=pk)\n",
+    "    profile = get_object_or_404(Profile, pk=1)\n",
     "    if profile:\n",
     "        form = ProfileModelForm(request.POST or None, request.FILES or None, instance=profile)\n",
     "    else:\n",
