Reinitialized OOP notebook

--- a/B_Intermediate_1/01. OOP in Python.ipynb
+++ b/B_Intermediate_1/01. OOP in Python.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 101,
    "metadata": {
     "collapsed": true
    },
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 102,
    "metadata": {
     "collapsed": true
    },
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 103,
    "metadata": {
     "collapsed": true
    },
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 104,
    "metadata": {
     "collapsed": false
    },
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 105,
    "metadata": {
     "collapsed": false
    },
@@ -139,23 +139,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Help on Square in module __main__ object:\n",
+      "Help on Shape in module __main__ object:\n",
       "\n",
-      "class Square(Shape)\n",
-      " |  Square implementation of Shape.\n",
-      " |  \n",
-      " |  Method resolution order:\n",
-      " |      Square\n",
-      " |      Shape\n",
-      " |      builtins.object\n",
+      "class Shape(builtins.object)\n",
+      " |  Base class for shapes.\n",
       " |  \n",
       " |  Methods defined here:\n",
-      " |  \n",
-      " |  __init__(self, side=None)\n",
-      " |      Initialize self.  See help(type(self)) for accurate signature.\n",
-      " |  \n",
-      " |  ----------------------------------------------------------------------\n",
-      " |  Methods inherited from Shape:\n",
       " |  \n",
       " |  area(self)\n",
       " |  \n",
@@ -166,7 +155,7 @@
       " |      Retun width or equivalent.\n",
       " |  \n",
       " |  ----------------------------------------------------------------------\n",
-      " |  Data descriptors inherited from Shape:\n",
+      " |  Data descriptors defined here:\n",
       " |  \n",
       " |  __dict__\n",
       " |      dictionary for instance variables (if defined)\n",
@@ -175,7 +164,7 @@
       " |      list of weak references to the object (if defined)\n",
       " |  \n",
       " |  ----------------------------------------------------------------------\n",
-      " |  Data and other attributes inherited from Shape:\n",
+      " |  Data and other attributes defined here:\n",
       " |  \n",
       " |  x = 0\n",
       " |  \n",
@@ -224,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 106,
    "metadata": {
     "collapsed": false
    },
@@ -247,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 107,
    "metadata": {
     "collapsed": false
    },
@@ -258,7 +247,7 @@
        "9"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 107,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -281,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 108,
    "metadata": {
     "collapsed": false
    },
@@ -290,7 +279,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<__main__.Square object at 0x1042b5a20>\n"
+      "<__main__.Square object at 0x10431a0b8>\n"
      ]
     }
    ],
@@ -307,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 109,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -334,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 110,
    "metadata": {
     "collapsed": false
    },
@@ -363,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 111,
    "metadata": {
     "collapsed": false
    },
@@ -406,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 112,
    "metadata": {
     "collapsed": false
    },
@@ -427,7 +416,7 @@
       " |  \n",
       " |  Methods defined here:\n",
       " |  \n",
-      " |  __init__(self, side=None)\n",
+      " |  __init__(self, **kwargs)\n",
       " |      Initialize self.  See help(type(self)) for accurate signature.\n",
       " |  \n",
       " |  __str__(self)\n",
@@ -484,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 113,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -496,7 +485,7 @@
        "8"
       ]
      },
-     "execution_count": 95,
+     "execution_count": 113,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -568,7 +557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 114,
    "metadata": {
     "collapsed": false
    },
@@ -586,7 +575,7 @@
        "0"
       ]
      },
-     "execution_count": 100,
+     "execution_count": 114,
      "metadata": {},
      "output_type": "execute_result"
     }
