Minor text edit

--- a/B_Intermediate_1/01. OOP in Python.ipynb
+++ b/B_Intermediate_1/01. OOP in Python.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -130,49 +130,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Help on Shape in module __main__ object:\n",
-      "\n",
-      "class Shape(builtins.object)\n",
-      " |  Base class for shapes.\n",
-      " |  \n",
-      " |  Methods defined here:\n",
-      " |  \n",
-      " |  area(self)\n",
-      " |  \n",
-      " |  height(self)\n",
-      " |      Retun height or equivalent.\n",
-      " |  \n",
-      " |  width(self)\n",
-      " |      Retun width or equivalent.\n",
-      " |  \n",
-      " |  ----------------------------------------------------------------------\n",
-      " |  Data descriptors defined here:\n",
-      " |  \n",
-      " |  __dict__\n",
-      " |      dictionary for instance variables (if defined)\n",
-      " |  \n",
-      " |  __weakref__\n",
-      " |      list of weak references to the object (if defined)\n",
-      " |  \n",
-      " |  ----------------------------------------------------------------------\n",
-      " |  Data and other attributes defined here:\n",
-      " |  \n",
-      " |  x = 0\n",
-      " |  \n",
-      " |  y = 0\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "help(s)"
    ]
@@ -213,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -236,22 +198,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "9"
-      ]
-     },
-     "execution_count": 107,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "s = Square(side=3)\n",
     "s.area()"
@@ -270,19 +221,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<__main__.Square object at 0x10431a0b8>\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(s)"
    ]
@@ -296,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -323,19 +266,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Square (2x2)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "s = Square(side=2)\n",
     "print(s)"
@@ -352,20 +287,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Triangle (2x3) \n",
-      "Area: 3.0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "class Triangle(Shape):\n",
     "    \"\"\"Square implementation of Shape.\"\"\"\n",
@@ -395,63 +321,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Help on Square in module __main__ object:\n",
-      "\n",
-      "class Square(Shape)\n",
-      " |  Square implementation of Shape.\n",
-      " |  \n",
-      " |  Method resolution order:\n",
-      " |      Square\n",
-      " |      Shape\n",
-      " |      builtins.object\n",
-      " |  \n",
-      " |  Methods defined here:\n",
-      " |  \n",
-      " |  __init__(self, **kwargs)\n",
-      " |      Initialize self.  See help(type(self)) for accurate signature.\n",
-      " |  \n",
-      " |  __str__(self)\n",
-      " |      Return str(self).\n",
-      " |  \n",
-      " |  ----------------------------------------------------------------------\n",
-      " |  Methods inherited from Shape:\n",
-      " |  \n",
-      " |  area(self)\n",
-      " |  \n",
-      " |  height(self)\n",
-      " |      Retun height or equivalent.\n",
-      " |  \n",
-      " |  width(self)\n",
-      " |      Retun width or equivalent.\n",
-      " |  \n",
-      " |  ----------------------------------------------------------------------\n",
-      " |  Data descriptors inherited from Shape:\n",
-      " |  \n",
-      " |  __dict__\n",
-      " |      dictionary for instance variables (if defined)\n",
-      " |  \n",
-      " |  __weakref__\n",
-      " |      list of weak references to the object (if defined)\n",
-      " |  \n",
-      " |  ----------------------------------------------------------------------\n",
-      " |  Data and other attributes inherited from Shape:\n",
-      " |  \n",
-      " |  x = 0\n",
-      " |  \n",
-      " |  y = 0\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "help(s)"
    ]
@@ -473,23 +347,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "scrolled": true
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "8"
-      ]
-     },
-     "execution_count": 113,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "class ThreeDimension(object):\n",
     "    \"\"\"Makes things 3D!\"\"\"\n",
@@ -506,6 +369,7 @@
     "\n",
     "\n",
     "class ThreeDimensionSquare(ThreeDimension, Square):\n",
+    "    \"\"\"Yes, it's a cube.\"\"\"\n",
     "    pass\n",
     "\n",
     "\n",
@@ -548,38 +412,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "One way to think of it is that when `super()` is called, is passes through to the parent or ancestor. In `ThreeDimension.__init__`, the value of `self.z` is set. The next line means to execute the `__init__` that was inherited, not the one that is defined in this class, overriding the inherited one.\n",
+    "One way to think of it is that when `super()` is called, is passes through to the parent or ancestor. In `ThreeDimension.__init__`, the value of `self.z` is set. The next line means to execute the `__init__` that was inherited, not the one that is defined in this class.\n",
     "\n",
-    "Note that in Python 3, base class and type parameters in `super()` are optional. `super().__init__(**kwargs)` achieves the same effect.\n",
+    "Note that in Python 3, base class and type parameters in `super()` are optional. `super().__init__(**kwargs)` achieves the same effect as `super(ThreeDimension, self).__init__(**kwargs)` in the `ThreeDimension` class.\n",
     "\n",
     "The `super()` function is not restricted to your current object. You can use super on any of your object's parents or derived classes and on their methods. In the next example, note how we are using super, passing `Square` as the argument. `BrokenShape.__init__()` is executed because instead of executing `Square.__init__()`, the execution is passed to next class in the hierarchy, which is `BrokenShape`."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "I broke it.\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "0"
-      ]
-     },
-     "execution_count": 114,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "class BrokenShape(object):\n",
     "    \n",
