Added exercise in print statement

--- a/A_Beginner_2/01. Built-in Functions.ipynb
+++ b/A_Beginner_2/01. Built-in Functions.ipynb
@@ -168,6 +168,34 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Try it Yourself!\n",
+    "\n",
+    "Create a create a print statement that will output the following:\n",
+    "\n",
+    "`Hello!World!Hi!World!Hey!World!Yo!World!`\n",
+    "\n",
+    "__Note:__ Use an exclamation point (`!`) as a separator, and assign each word in a variable."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# Write your code below\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## 1.3 [type()](https://docs.python.org/3.5/library/functions.html#type)\n",
     "\n",
     "This returns the type of an object. For example:"
