Added exercise in type casting and made minor modifications

--- a/A_Beginner_2/01. Built-in Functions.ipynb
+++ b/A_Beginner_2/01. Built-in Functions.ipynb
@@ -168,13 +168,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Try it Yourself!\n",
+    "### Try it yourself!\n",
     "\n",
-    "Create a create a print statement that will output the following:\n",
+    "Create a create a `print` statement that will output the following:\n",
     "\n",
     "`Hello!World!Hi!World!Hey!World!Yo!World!`\n",
     "\n",
-    "__Note:__ Use an exclamation point (`!`) as a separator, and assign each word in a variable."
+    "__Note:__ Use an exclamation point (`!`) as a separator, and assign each unique word in a variable."
    ]
   },
   {
@@ -285,6 +285,19 @@
     "y = float(x) # We used the int() function to convert \"100\" which is a string into a float.\n",
     "\n",
     "print(type(y))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Try it yourself!\n",
+    "\n",
+    "- Create a variable __`a`__ and assign any string to it.\n",
+    "- Convert it into an integer\n",
+    "- Check if it's converted to integer by p\n",
+    "\n",
+    "\n"
    ]
   },
   {
