Added exercise in variable reassignment

--- a/A_Beginner_2/01. Built-in Functions.ipynb
+++ b/A_Beginner_2/01. Built-in Functions.ipynb
@@ -294,8 +294,23 @@
     "### Try it yourself!\n",
     "\n",
     "- Create a variable __`a`__ and assign any string to it.\n",
-    "- Convert it into an integer\n",
-    "- Check if it's converted to integer by p\n",
+    "- Convert it into an integer.\n",
+    "- Check if it's converted to integer by printing its type.\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Write your code below\n",
+    "\n",
+    "\n",
     "\n",
     "\n"
    ]
