--- a/A_Beginner_2/02. Variables.ipynb
+++ b/A_Beginner_2/02. Variables.ipynb
@@ -168,6 +168,31 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Try it yourself! \n",
+    "\n",
+    "- (1) Create a variable `x` and assign the value `'red'`\n",
+    "- (2) Create another variable `y`, and assign the value `'yellow'`\n",
+    "- (3) Switch the value of `y` to `'red'` and print the result.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# Write your code below\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## 2.5 [Comparison Chaining](https://docs.python.org/3.5/reference/expressions.html#comparisons) \n",
     "\n",
     "\n",
