Minor updates on data types

--- a/A_Beginner_2/03. Data Types.ipynb
+++ b/A_Beginner_2/03. Data Types.ipynb
@@ -105,19 +105,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "I love\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Run the code to see the result\n",
     "\n",
@@ -146,6 +138,7 @@
    "source": [
     "# Write your code below:\n",
     "\n",
+    "my_string = \"I love Python!\"\n",
     "\n",
     "\n"
    ]
@@ -156,7 +149,7 @@
     "collapsed": true
    },
    "source": [
-    "- The plus (__`+`__) sign is the string concatenation operator and the asterisk (__`*`__) is the repetition operator. \n",
+    "The __plus (__`+`__) sign__ is the string concatenation operator while the __asterisk (__`*`__)__ is the repetition operator. \n",
     "\n",
     "For example:"
    ]
@@ -200,12 +193,7 @@
    "outputs": [],
    "source": [
     "my_list1 = [1, 2, 3, 4, 5]\n",
-    "my_list2 = [1, \"John\", \"Bob\", \"7.86\"]\n",
-    "\n",
-    "# Try slicing the list:\n",
-    "\n",
-    "\n",
-    "    "
+    "my_list2 = [1, \"John\", \"Bob\", \"7.86\"]"
    ]
   },
   {
@@ -243,7 +231,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 03.0.4 Tuples (immutable)\n",
+    "### 3.0.4 Tuples (immutable)\n",
     "\n",
     "A tuple is another sequence data type that is similar to the list. A tuple consists of a number of values separated by commas. Unlike lists, however, tuples are enclosed within parentheses.\n",
     "\n",
@@ -297,7 +285,7 @@
     "dict = {}\n",
     "dict['one'] = \"This is one\"\n",
     "dict[2] = \"This is two\"\n",
-    "\n",
+    "        \n",
     "tinydict = {'name': 'john','code':6734, 'dept': 'sales'}\n",
     "\n",
     "\n",
