--- a/A_Beginner_2/03. Data Types.ipynb
+++ b/A_Beginner_2/03. Data Types.ipynb
@@ -96,6 +96,113 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "The __plus (__`+`__) sign__ is the string concatenation operator while the __asterisk (__`*`__)__ is the repetition operator. \n",
+    "\n",
+    "For example:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# Run the code to see the example\n",
+    "\n",
+    "my_string1 = \"Hello\"\n",
+    "my_string2 = \"World\"\n",
+    "\n",
+    "print(my_string1 + my_string2)\n",
+    "print(my_string1 * 3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Try it yourself: String Concatenation\n",
+    "\n",
+    "- (1) Create a variable `'string1'` and assign the value `'The Simpsons'`\n",
+    "- (2) Create another variable `'string2'` and assign the value `'Family Guy'`\n",
+    "- (3) Using the concatenation operator, create a code snippet which should result to this output: \n",
+    "\n",
+    "__`\"I think The Simpsons is better than Family guy\"`__"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# Write your code below\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Try it yourself: Repetition Operator\n",
+    "\n",
+    "- Create a variable `'test1'` and assign the value `'Testing'`\n",
+    "- Using the repetition operator, print the output below:\n",
+    "\n",
+    "__\"`TestingTestingTestingTestingTesting`\"__\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "TestingTestingTestingTestingTesting\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Write your code below\n",
+    "\n",
+    "test1= 'Testing'\n",
+    "print(test1*5)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Write your code below\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "- Subsets of an [iterable](https://wiki.python.org/moin/Iterator) can be taken using the slice operator (__`[:]`__) with indexes starting at 0 in the beginning of the string and working their way to -1 at the end. Strings, as well as lists, and sets are subscriptable iterables. Slicing creates copies of it. We'll take a deeper look at slicing later.\n",
@@ -145,34 +252,6 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
-   "source": [
-    "The __plus (__`+`__) sign__ is the string concatenation operator while the __asterisk (__`*`__)__ is the repetition operator. \n",
-    "\n",
-    "For example:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "# Run the code to see the example\n",
-    "\n",
-    "my_string1 = \"Hello\"\n",
-    "my_string2 = \"World\"\n",
-    "\n",
-    "print(my_string1 + my_string2)\n",
-    "print(my_string1 * 3)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "### 3.0.3 List (mutable)\n",
@@ -200,7 +279,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The values stored in a list can be accessed using the slice operator (__`[:]`__) with indexes starting at 0 in the beginning of the list and working their way to end -1. The plus (__`+`__) sign is the list concatenation operator, and the asterisk (__`*`__) is the repetition operator. \n",
+    "The values stored in a list can be accessed using the slice operator (__`[:]`__) with indexes starting at 0 in the beginning of the list and working their way to end -1. Similar with strings, the plus (__`+`__) sign is the list concatenation operator, and the asterisk (__`*`__) is the repetition operator. \n",
     "\n",
     "For example:"
    ]
